🚧 fix DM scrollbar thumb

--- a/discord-inspired-bits-dark.user.css
+++ b/discord-inspired-bits-dark.user.css
@@ -330,6 +330,13 @@
 		width: 8px !important;
 		margin-left: 3px !important;
 	}
+	.channels-Ie2l6A .thumb-2JwNFC {
+		width: 8px !important;
+		margin-left: 4px !important;
+	}
+	.channels-Ie2l6A .track-1JN30G {
+		width: 10px !important;
+	}
 	.thumb-2JwNFC {
 		width: 6px !important;
 		margin: 1px !important;
